1999-22-06  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/move.c (InteractiveMove): Small interactive move fix (bug #377)

Thu May 27 07:38:11 1999  DanEspen  <dje@blue>

	* fvwm/fvwm2.1 (EdgeThickness): Updated man pages, EdgeThickness
	can be used at any time.

	* NEWS: Updated news for 2.2.2 release.

	* fvwm/complex.c (expand): Applied patch from Brad for empty args.

1999-05-10  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* configure.in: set version to 2.2.2.

1999-05-10  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* utils/fvwmrc_convert: fixes by Julian Gilbey; updated to
	cvs version 1.4.

1999-03-17  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* INSTALL.fvwm: add note about include directories for optional
	libraries.

1999-03-16  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/menus.c (DoMenusOverlap): Use real numbers for the width
	modifier to avoid excessive roundoff.

1999-02-28  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

        * libs/ModParse.c (GetArgument): fix GetArgument for quoted args.
        (DoPeekArgument): new function needed in GetArgument.
	Use safemalloc instead of malloc ( change copied from
	modules/FvwmEvent/Parse.c ).
        (PeekArgument): now call DoPeekArgument.

        * fvwm/move.c (InteractiveMove): fix behaviour of
        InteractiveMove when called from a context other than a
        ButtonPress or KeyPress.

        * fvwm/builtins.c (WindowShade): fix an off-by-one error
        with shaded FvwmBorder windows.

1999-02-26  Hippo

        * fvwm/builtins.c: Emulate command updates feedback window position.

        * fvwm/virtual.c: EdgeThickness command can be used at any time to alter
        the panframe windows. Panframe windows unmapped when paging to the end
        page and wrapping is disabled.  Panframe windows go right into the corners.

	* fvwm/placement.c: fixed wandering on restart/recapture caused by
	old_bw being ignored.

1999-02-25  Paul D. Smith  <psmith@gnu.org>
